--- a/src/06-event/styles/06-event-00-Render.scss
+++ b/src/06-event/styles/06-event-00-Render.scss
@@ -5,9 +5,9 @@
     justify-content: space-between;
     @media (max-width: 390px){
       width: 100vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      outline: solid red 2px;
+      display: block;
+      // flex-direction: column;
+      // justify-content: space-between;
+      // outline: solid red 2px;
     }
   }
