--- a/src/06-event/styles/06-event-02-events.scss
+++ b/src/06-event/styles/06-event-02-events.scss
@@ -54,11 +54,25 @@ body {
   position: fixed;
   @include size(1100px, 900px);
   transform: translate(-50%, -50%);
+  animation: moveIn 1s ease-out;
+  @keyframes moveIn {
+    0% {
+      transform: translate(-50%, 130%);
+      opacity: 0.5;
+    }
+    50% {
+      transform: translate(-50%, -70%);
+      opacity: 1;
+    }
+    100% {
+      transform: translate(-50%, -50%);
+      opacity: 1;
+    }
+  }
   @media (max-width: 390px) {
     // outline: 1px black solid;
-    @include position(55%, 51%);
+    @include position(67%, 51%);
     @include size(360px, 844px);
-    transform: translate(-50%, -50%);
   }
   .j-cate-banner {
     @include size(100%, 170px);
@@ -154,7 +168,7 @@ body {
     overflow: hidden;
     @media (max-width: 390px) {
       margin-top: 15px;
-      outline: 2px solid red;
+      // outline: 2px solid red;
       position: relative;
     }
     .j-blue-mountain {
@@ -162,11 +176,11 @@ body {
       transform: scale(0.8);
       @include position(16%, -6%);
       @media (max-width: 390px) {
-        // transform: scale(0.4);
+        transform: scale(0.3);
         position: absolute;
         top: 0;
-        left: 0;
-        outline: 2px solid red;
+        left: -190px;
+        // outline: 2px solid red;
       }
     }
     .j-rice-mountain {
@@ -174,11 +188,11 @@ body {
       transform: scale(0.8);
       @include position(16%, 18%);
       @media (max-width: 390px) {
-        transform: scale(0.4);
+        transform: scale(0.3);
         position: absolute;
         top: 0;
-        left: 0;
-        outline: 2px solid green;
+        left: -90px;
+        // outline: 2px solid green;
       }
     }
     .j-green-mountain {
@@ -186,11 +200,11 @@ body {
       transform: scale(0.8);
       @include position(16%, 41%);
       @media (max-width: 390px) {
-        transform: scale(0.4);
+        transform: scale(0.3);
         position: absolute;
         top: 0;
         left: 0;
-        outline: 2px solid blue;
+        // outline: 2px solid blue;
       }
     }
     .j-orange-mountain {
@@ -198,11 +212,11 @@ body {
       transform: scale(0.8);
       @include position(16%, 65%);
       @media (max-width: 390px) {
-        transform: scale(0.4);
+        transform: scale(0.3);
         position: absolute;
         top: 0;
-        left: 20%;
-        outline: 2px solid purple;
+        left: 100px;
+        // outline: 2px solid purple;
       }
     }
     div.mactive {
@@ -210,9 +224,8 @@ body {
       transform: scale(1);
       transform: translateY(-16%);
       @media (max-width: 390px) {
-        // transform: scale(0.2);
-        width: 50%;
         // transform: translateY(-10px);
+        transform: scale(0.3);
       }
     }
     img {
@@ -227,6 +240,8 @@ body {
     padding: 45px 40px;
     @media (max-width: 390px) {
       padding: 15px 15px;
+      position: absolute;
+      top: 220px;
     }
     .j-lego {
       display: grid;
@@ -266,10 +281,14 @@ body {
         justify-content: space-between;
         img {
           width: 5%;
+          @media (max-width: 390px) {
+            display: none;
+          }
         }
         @media (max-width: 390px) {
           border-radius: 5px;
-          font-size: 2.5rem;
+          font-size: 2rem;
+          justify-content: center;
         }
       }
       .j-card-image {
@@ -314,7 +333,7 @@ body {
 
         @media (max-width: 390px) {
           border-radius: 5px;
-          font-size: 2.5rem;
+          font-size: 2rem;
           display: flex;
           justify-content: center;
           align-items: center;
