--- a/src/06-event/components/Emptycard/Emptycard.scss
+++ b/src/06-event/components/Emptycard/Emptycard.scss
@@ -46,6 +46,8 @@ html {
     flex-direction: column;
     justify-content: space-between;
     background-color: $colorList;
+    @media (max-width: 390px){
+    }
   .j-line{
     width: 100%;
     height: 2px;
