--- a/src/06-event/styles/06-event-03-schedule.scss
+++ b/src/06-event/styles/06-event-03-schedule.scss
@@ -51,11 +51,35 @@ body {
   @include position(47%, 49%);
   @include size(1100px, 900px);
   transform: translate(-50%, -50%);
+  animation: moveIn 1s ease-out;
+  @keyframes moveIn {
+    0% {
+      transform: translate(-50%, 130%);
+      opacity: 0.5;
+    }
+    50% {
+      transform: translate(-50%, -70%);
+      opacity: 1;
+    }
+    100% {
+      transform: translate(-50%, -50%);
+      opacity: 1;
+    }
+  }
+  @media (max-width: 390px) {
+    // outline: 1px black solid;
+    @include position(67%, 51%);
+    @include size(360px, 844px);
+  }
 
   .j-cate-banner {
     @include size(100%, 170px);
     background-color: $colorLightGrey;
     padding: 15px 20px;
+    @media (max-width: 390px) {
+      @include size(100%, 100px);
+      padding: 6px 10px;
+    }
 
     .j-cate-banner-deco {
       @include size(100%, 100%);
@@ -64,12 +88,21 @@ body {
       justify-content: flex-start;
       align-items: center;
       padding-left: 50px;
+      @media (max-width: 390px) {
+        display: flex;
+        justify-content: center;
+        padding-left: 0;
+      }
 
       div {
         font-size: 7rem;
         font-weight: 900;
         color: $colorDarkGrey;
         letter-spacing: 0.8rem;
+        @media (max-width: 390px) {
+          font-size: 4rem;
+          text-align: center;
+        }
       }
     }
   }
@@ -77,6 +110,9 @@ body {
   .j-event-schedule {
     background-color: $colorWhite;
     margin-top: 30px;
+    // @media (max-width: 390px){
+    //   width: 200px;
+    // }
     .j-event-schedule-title {
       width: 100%;
       height: 200px;
@@ -84,6 +120,10 @@ body {
       display: flex;
       align-items: center;
       border-bottom: 3px $colorLine solid;
+      @media (max-width: 390px) {
+        height: 100px;
+      }
+
       .j-stages-card-1 {
         width: 18%;
         height: 65%;
@@ -102,11 +142,17 @@ body {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
+          @media (max-width: 390px) {
+            padding: 1px;
+          }
 
           .j-star-left {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
 
           .j-stage-name {
@@ -117,12 +163,19 @@ body {
             font-weight: 700;
             color: $colorWhite;
             line-height: 1;
+            @media (max-width: 390px) {
+              font-size: 2.2rem;
+              margin: auto;
+            }
           }
 
           .j-star-right {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
         }
       }
@@ -144,11 +197,17 @@ body {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
+          @media (max-width: 390px) {
+            padding: 1px;
+          }
 
           .j-star-left {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
 
           .j-stage-name {
@@ -159,12 +218,19 @@ body {
             font-weight: 700;
             color: $colorWhite;
             line-height: 1;
+            @media (max-width: 390px) {
+              font-size: 2.2rem;
+              margin: auto;
+            }
           }
 
           .j-star-right {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
         }
       }
@@ -186,11 +252,17 @@ body {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
+          @media (max-width: 390px) {
+            padding: 1px;
+          }
 
           .j-star-left {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
 
           .j-stage-name {
@@ -201,12 +273,19 @@ body {
             font-weight: 700;
             color: $colorWhite;
             line-height: 1;
+            @media (max-width: 390px) {
+              font-size: 2.2rem;
+              margin: auto;
+            }
           }
 
           .j-star-right {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
         }
       }
@@ -228,11 +307,17 @@ body {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
+          @media (max-width: 390px) {
+            padding: 1px;
+          }
 
           .j-star-left {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
 
           .j-stage-name {
@@ -243,12 +328,19 @@ body {
             font-weight: 700;
             color: $colorWhite;
             line-height: 1;
+            @media (max-width: 390px) {
+              font-size: 2.2rem;
+              margin: auto;
+            }
           }
 
           .j-star-right {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
         }
       }
@@ -270,11 +362,17 @@ body {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
+          @media (max-width: 390px) {
+            padding: 1px;
+          }
 
           .j-star-left {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
 
           .j-stage-name {
@@ -285,12 +383,19 @@ body {
             font-weight: 700;
             color: $colorWhite;
             line-height: 1;
+            @media (max-width: 390px) {
+              font-size: 2.2rem;
+              margin: auto;
+            }
           }
 
           .j-star-right {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @media (max-width: 390px) {
+              display: none;
+            }
           }
         }
       }
@@ -302,6 +407,9 @@ body {
       display: flex;
       flex-direction: row;
       // outline: 2px red solid;
+      @media (max-width: 390px){
+        height: 800px;
+      }
       .j-big-bottom {
         width: 100%;
         height: 8%;
